--- a/wintest/conf/bob.conf
+++ b/wintest/conf/bob.conf
@@ -1,10 +1,10 @@
 # config file for test-howto.py for abartlet's KVM based setup (using libvirt)
 
 # where the git checkout is
-SOURCETREE            : /usr/local/samba
+SOURCETREE            : /home/ubuntu/samba
 
 # where to install Samba to
-PREFIX                : /usr/local/samba/tmp
+PREFIX                : /tmp
 
 # debug level which will be put in smb.conf
 DEBUGLEVEL	      : 1
@@ -16,7 +16,7 @@ VM_RESET              : virsh reboot ${VMNAME}
 
 # interfaces to create
 INTERFACE            : eth0:0
-#NAMED_INTERFACE            : virbr0:1
+NAMED_INTERFACE      : eth0:1
 
 # this is an additional IP that will be used for named to listen
 # on. It should not be the primary IP of the interface.  We need one
@@ -25,8 +25,8 @@ INTERFACE            : eth0:0
 
 INTERFACE_IP          : 192.168.122.3
 INTERFACE_NET         : 192.168.122.3/24
-#NAMED_INTERFACE_IP          : 192.168.122.2
-#NAMED_INTERFACE_NET         : 192.168.122.2/24
+NAMED_INTERFACE_IP          : 192.168.122.2
+NAMED_INTERFACE_NET         : 192.168.122.2/24
 
 # how to run bind9
 BIND9	              : /usr/sbin/named
