--- a/wintest/conf/bob.conf
+++ b/wintest/conf/bob.conf
@@ -32,7 +32,7 @@ NAMED_INTERFACE_NET         : 192.168.122.2/24
 BIND9	              : /usr/sbin/named
 NAMED_CHECKCONF       : /usr/sbin/named-checkconf
 RNDC	              : /usr/sbin/rndc
-BIND_USER             : named
+BIND_USER             : bind
 
 # provision information
 REALM                 : S4.HOWTO.ABARTLET.NET
