--- a/wintest/conf/bob.conf
+++ b/wintest/conf/bob.conf
@@ -10,20 +10,19 @@ PREFIX                : /tmp
 DEBUGLEVEL	      : 1
 
 # commands to control VMs
-VM_POWEROFF           : virsh destroy ${VMNAME}
-VM_RESTORE            : virsh snapshot-revert ${VMNAME} ${SNAPSHOT}
-VM_RESET              : virsh reboot ${VMNAME}
+VM_POWEROFF           :
+VM_RESTORE            : . /usr/local/bin/openstack_creds && nova boot --flavor c1.c2r2 --block-device source=image,id=6d1d5ec3-d624-4e9a-ae23-4a604a55582a,dest=volume,shutdown=remove,bootindex=0,size=70 ${VMNAME} --nic net-id=066ce85e-3476-4d74-ba82-15adc9386116 --userdata=/usr/local/bin/win-userdata
+VM_RESET              : nova reboot ${VMNAME}
 
 # interfaces to create
-INTERFACE            : eth0:0
-NAMED_INTERFACE      : eth0:1
+NAMED_INTERFACE      : lo:0
+INTERFACE            : eth0
 
 # this is an additional IP that will be used for named to listen
 # on. It should not be the primary IP of the interface.  We need one
 # for BIND (which redirects to the other hosts) and one for Samba,
 # which might be running our own DNS
 
-INTERFACE_IP          : 192.168.122.3
 INTERFACE_NET         : 192.168.122.3/24
 NAMED_INTERFACE_IP          : 192.168.122.2
 NAMED_INTERFACE_NET         : 192.168.122.2/24
