--- a/wintest/conf/bob.conf
+++ b/wintest/conf/bob.conf
@@ -47,14 +47,14 @@ WINDOWS7_HOSTNAME     : Windows7-3
 WINDOWS7_VM           : Windows7-3
 WINDOWS7_SNAPSHOT     : 1329351855
 WINDOWS7_USER         : administrator
-WINDOWS7_PASS         : penguin
+WINDOWS7_PASS         : penguin12#
 
 # a winxp VM - needs Windows XP Service Pack 2 Support Tools
 WINXP_HOSTNAME        : WinXP-1
 WINXP_VM              : WinXP-1
 WINXP_SNAPSHOT        : 1329361864
 WINXP_USER            : administrator
-WINXP_PASS            : penguin
+WINXP_PASS            : penguin12#
 
 # Samba will join this w2k8r2 VM as a DC and then as a RODC
 W2K8R2A_HOSTNAME      : Win2008R2-3
@@ -82,21 +82,21 @@ W2K3A_HOSTNAME        : Win2003R2-2
 W2K3A_VM              : Win2003R2-2
 W2K3A_REALM           : 2003.HOWTO.ABARTLET.NET
 W2K3A_DOMAIN          : 2003HOWTO
-W2K3A_PASS            : penguin
+W2K3A_PASS            : penguin12#
 W2K3A_SNAPSHOT        : 1314652035
 W2K3A_IP              : 192.168.122.91
 
 # this w2k3 VM will become a DC in the samba domain
 W2K3B_HOSTNAME        : Win2003R2-4
 W2K3B_VM              : Win2003R2-4
-W2K3B_PASS            : penguin
+W2K3B_PASS            : penguin12#
 W2K3B_SNAPSHOT        : 1331186260
 W2K3B_IP              : 192.168.122.164
 
 # this w2k3 VM will become a member in the samba domain
 W2K3C_HOSTNAME        : Win2003R2-3
 W2K3C_VM              : Win2003R2-3
-W2K3C_PASS            : penguin
+W2K3C_PASS            : penguin12#
 W2K3C_SNAPSHOT        : 1329451062
 W2K3C_IP              : 192.168.122.162
 
