--- a/wintest/conf/bob.conf
+++ b/wintest/conf/bob.conf
@@ -10,7 +10,7 @@ PREFIX                : /tmp
 DEBUGLEVEL	      : 1
 
 # commands to control VMs
-VM_POWEROFF           :
+VM_POWEROFF           : nova delete ${VMNAME}
 VM_RESTORE            : . /usr/local/bin/openstack_creds && nova boot --flavor c1.c2r2 --block-device source=image,id=6d1d5ec3-d624-4e9a-ae23-4a604a55582a,dest=volume,shutdown=remove,bootindex=0,size=70 ${VMNAME} --nic net-id=066ce85e-3476-4d74-ba82-15adc9386116 --user-data=/usr/local/bin/win-userdata
 VM_RESET              : nova reboot ${VMNAME}
 
