nova get ip for bind9 server

--- a/wintest/conf/bob.conf
+++ b/wintest/conf/bob.conf
@@ -13,6 +13,7 @@ DEBUGLEVEL	      : 1
 VM_POWEROFF           : . /usr/local/bin/openstack_creds && nova delete ${VMNAME}
 VM_RESTORE            : . /usr/local/bin/openstack_creds && nova boot --flavor c1.c2r2 --block-device source=image,id=6d1d5ec3-d624-4e9a-ae23-4a604a55582a,dest=volume,shutdown=remove,bootindex=0,size=70 ${VMNAME} --nic net-id=066ce85e-3476-4d74-ba82-15adc9386116 --user-data=/usr/local/bin/win-userdata
 VM_RESET              : . /usr/local/bin/openstack_creds && nova reboot ${VMNAME}
+VM_GET_IP             : . /usr/local/bin/openstack_creds && nova interface-list ${VMNAME} | grep ACTIVE | cut -d '|' -f5
 
 # interfaces to create
 NAMED_INTERFACE      : lo:0
