--- a/wintest/conf/bob.conf
+++ b/wintest/conf/bob.conf
@@ -39,42 +39,42 @@ REALM                 : S4.HOWTO.ABARTLET.NET
 LCREALM               : s4.howto.abartlet.net
 DOMAIN                : s4-howto
 BASEDN                : DC=s4,DC=howto,DC=abartlet,DC=net
-PASSWORD1             : [pass_1]
-PASSWORD2             : [pass_2]
-PASSWORD3             : [pass_3]
+PASSWORD1             : pass_1
+PASSWORD2             : pass_2
+PASSWORD3             : pass_3
 
 # a Windows7 VM
 WINDOWS7_HOSTNAME     : Windows7-3
 WINDOWS7_VM           : Windows7-3
 WINDOWS7_SNAPSHOT     : 1329351855
 WINDOWS7_USER         : administrator
-WINDOWS7_PASS         : [win_pass]
+WINDOWS7_PASS         : win_pass
 
 # a winxp VM - needs Windows XP Service Pack 2 Support Tools
 WINXP_HOSTNAME        : WinXP-1
 WINXP_VM              : WinXP-1
 WINXP_SNAPSHOT        : 1329361864
 WINXP_USER            : administrator
-WINXP_PASS            : [win_pass]
+WINXP_PASS            : win_pass
 
 # Samba will join this w2k8r2 VM as a DC and then as a RODC
 W2K8R2A_HOSTNAME      : Win2008R2-3
 W2K8R2A_VM            : Win2008R2-3
 W2K8R2A_REALM         : 2008R2.HOWTO.ABARTLET.NET
 W2K8R2A_DOMAIN        : 2008R2HOWTO
-W2K8R2A_PASS          : [win_pass]
+W2K8R2A_PASS          : win_pass
 W2K8R2A_SNAPSHOT      : 1329218595
 
 # this w2k8r2 VM will become a DC in the samba domain
 W2K8R2B_HOSTNAME      : Win2008R2-7
 W2K8R2B_VM            : Win2008R2-7
-W2K8R2B_PASS          : [win_pass]
+W2K8R2B_PASS          : win_pass
 W2K8R2B_SNAPSHOT      : 1329964204
 
 # this w2k8r2 VM will become a RODC in the samba domain
 W2K8R2C_HOSTNAME      : Win2008R2-6
 W2K8R2C_VM            : Win2008R2-6
-W2K8R2C_PASS          : [win_pass]
+W2K8R2C_PASS          : win_pass
 W2K8R2C_SNAPSHOT      : 1329785556
 
 # Samba will join this w2k3 VM as a DC
@@ -82,17 +82,17 @@ W2K3A_HOSTNAME        : Win2003R2-2
 W2K3A_VM              : Win2003R2-2
 W2K3A_REALM           : 2003.HOWTO.ABARTLET.NET
 W2K3A_DOMAIN          : 2003HOWTO
-W2K3A_PASS            : [win_pass]
+W2K3A_PASS            : win_pass
 W2K3A_SNAPSHOT        : 1314652035
 
 # this w2k3 VM will become a DC in the samba domain
 W2K3B_HOSTNAME        : Win2003R2-4
 W2K3B_VM              : Win2003R2-4
-W2K3B_PASS            : [win_pass]
+W2K3B_PASS            : win_pass
 W2K3B_SNAPSHOT        : 1331186260
 
 # this w2k3 VM will become a member in the samba domain
 W2K3C_HOSTNAME        : Win2003R2-3
 W2K3C_VM              : Win2003R2-3
-W2K3C_PASS            : [win_pass]
+W2K3C_PASS            : win_pass
 W2K3C_SNAPSHOT        : 1329451062
